<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EDUCAyambe</string>
    <string name="usernanme">Correo Electronico:</string>
    <string name="password">Contrasena:</string>
    <string name="login">Ingresar</string>
    <string name="forgot">Olvidastes tu Contraseña?</string>
    <string name="register">Eres nuevo? Regístrate aquí</string>
    <string name="About">Acerca de...</string>
    <string name="update_content">Actualizar Contenidos</string>
    <string name="help">Ayuda</string>
    <string name="logout">Salir</string>
    <string name="title_activity_principal">Principal</string>
    <string name="hello_world">Hello world!</string>
    <string name="Biography">Biografía</string>
    <string name="Eagle_eyes">Ojos de Aguila</string>
    <string name="recovery">Ingrese su correo electronico:</string>
    <string name="Tourism">Turismo</string>
    <string name="Download">Descargas</string>
    <string name="Dictionary">Diccionario</string>
    <string name="correo">Ingrese su correo electrónico:</string>
    <string name="confirm_correo">Confirme su correo electronico:</string>
    <string name="password1">Ingrese su contraseña:</string>
    <string name="password2">Confirme su contraseña:</string>
    <string name="Names">Ingrese sus Nombres Completos :</string>
    <string name="Sector">Ingrese su Sector de Residencia:</string>
    <string name="School">Seleccione Institución Educativa:</string>
    <string name="cedula">Ingrese su cedula:</string>
    <string name="title_activity_biography">Biografía</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_eagle__eyes">Comunicación Digital</string>
    <string name="title_activity_tourism">Turismo</string>
    <string name="title_activity_download">Descargas</string>
    <string name="title_activity_dictionary">Diccionario</string>
    <string name="title_activity_eagle_eyes">Comunicacion Digital</string>
    <string name="title_activity_detail">Detalle</string>
    <string name="title_activity_news">Noticias</string>
    <string name="title_activity_register">Registro</string>
    <string name="title_activity_forgot">Recuperación</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_results">Resultado</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_alcalde">splash_alcalde</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
