<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    android:background="@drawable/aplicativo_textura"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="danna.net.gadapp.Register"
    android:id="@+id/register"
    android:clickable="true">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibtnRegister"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="580dp"
        android:src="@drawable/m_registrar"
        android:onClick="onClick" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibtncancel"
        android:src="@drawable/m_cancelar"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="740dp"
        android:onClick="onClick"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:id="@+id/lblTitlen"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_correo"
        android:id="@+id/textView2"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="25dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password1"
        android:id="@+id/textView3"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="25dp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password2"
        android:id="@+id/textView4"
        android:layout_marginTop="175dp"
        android:layout_marginLeft="25dp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Names"
        android:id="@+id/textView5"

        android:layout_marginTop="230dp"
        android:layout_marginLeft="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cedula"
        android:id="@+id/textView6"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sector"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/textView7"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/School"
        android:id="@+id/txtDesc"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="25dp"

         />

    <EditText
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtcorreo"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="250dp"
        android:maxLength="30" />

    <EditText
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtCorreoConfirm"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="250dp"
        android:maxLength="30" />

    <EditText
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtpassword"
        android:layout_marginTop="105dp"
        android:layout_marginLeft="250dp"
        android:maxLength="20" />

    <EditText
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="250dp"
        android:id="@+id/txtConfirmPassword"
        android:maxLength="20" />

    <EditText
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtPersonName"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="250dp"
       android:maxLength="50" />

    <EditText
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtCedula"
        android:layout_marginTop="265dp"
        android:layout_marginLeft="250dp"
        android:maxLength="10" />


    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="250dp"
        android:id="@+id/txtPhones"
        android:maxLength="30" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="250dp"
        android:id="@+id/spinner"
        android:spinnerMode="dropdown"
         />


</RelativeLayout>
